No real difference between this and the last commit

--- a/HMTL_LEVEL_TWO/forms_and_labels.html
+++ b/HMTL_LEVEL_TWO/forms_and_labels.html
@@ -41,6 +41,8 @@ test is removed when we click in the box and start typing-->
 
   </form> -->
 
+<!-- If we don't fill in the input which has the 'required' argument, and try
+to submit, we will get an error. -->
   <form>
     <input type="text" name="" placeholder="Not required">
     <input type="text" name="" placeholder="Required" required>
